--- a/earthquake.html
+++ b/earthquake.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
- <head>
+<head>
     <meta charset="utf-8">
     <title>Earthquake List</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
@@ -8,52 +8,50 @@
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.js"></script>
     <style>
         body {
-    margin: 0;
-    padding: 0;
-}
-
-#container {
-    display: flex;
-    height: 100vh;
-    flex-direction: row;
-    align-items: stretch;
-}
-#side-panel {
-    flex-basis: 500px;
-    overflow-y: scroll;
-}
-
-#map {
-    flex-grow: 1;
-}
-button {
-    margin-bottom: 10px;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    width: 100%;
-    border: 1px solid #ddd;
-}
-
-th,
-td {
-    text-align: left;
-    padding: 16px;
-}
-
-tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
+            margin: 0;
+            padding: 0;
+        }
+        #container {
+            display: flex;
+            height: 100vh;
+            flex-direction: row;
+            align-items: stretch;
+        }
+        #side-panel {
+            flex-basis: 500px;
+            overflow-y: scroll;
+        }
+        #map {
+            flex-grow: 1;
+        }
+        button {
+            margin-bottom: 10px;
+        }
+        table {
+            border-collapse: collapse;
+            border-spacing: 0;
+            width: 100%;
+            border: 1px solid #ddd;
+        }
+        th, td {
+            text-align: left;
+            padding: 16px;
+        }
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+        @media (max-width: 1024px) {
+        #side-panel {
+        display: none;
+        }
+        }
     </style>
- </head>
- <body>
+</head>
+<body>
     <main id="container">
         <div id="side-panel">
- 
             <h2>Earthquake List</h2>
-            <button>Sort by Magnitude</button>
- 
+            <button onclick="sortTable()">Sort by Magnitude</button>
             <table>
                 <tr>
                     <th>id</th>
@@ -61,84 +59,73 @@ tr:nth-child(even) {
                     <th>timestamp</th>
                 </tr>
             </table>
- 
         </div>
         <div id="map"></div>
     </main>
     <script>
         mapboxgl.accessToken = 'pk.eyJ1IjoiYmlsbHl0bzA2IiwiYSI6ImNtNnI4dHJhdTIxcGsyaXB5dDJmczF0MGcifQ.p6ainmFdX9fv4eiE7ZoDnA';
-
         let map = new mapboxgl.Map({
-    container: 'map', // container ID
-    style: 'mapbox://styles/mapbox/satellite-v9', // style URL
-    zoom: 5.5, // starting zoom
-    center: [138, 38] // starting center
-    });
+            container: 'map',
+            style: 'mapbox://styles/mapbox/satellite-v9',
+            zoom: 5.5,
+            center: [138, 38]
+        });
 
+        async function geojsonFetch() {
+            let response, earthquakes;
+            response = await fetch('assets/earthquakes.geojson');
+            earthquakes = await response.json();
 
-    async function geojsonFetch() {
-    let response, earthquakes, japan, table;
-    response = await fetch('assets/earthquakes.geojson');
-    earthquakes = await response.json();
-    response = await fetch('assets/japan.json');
-    japan = await response.json();
+            map.on('load', function () {
+                map.addSource('earthquakes', {
+                    type: 'geojson',
+                    data: earthquakes
+                });
+                map.addLayer({
+                    'id': 'earthquakes-layer',
+                    'type': 'circle',
+                    'source': 'earthquakes',
+                    'paint': {
+                        'circle-radius': 8,
+                        'circle-stroke-width': 2,
+                        'circle-color': 'red',
+                        'circle-stroke-color': 'white'
+                    }
+                });
+            });
 
-    //load data to the map as new layers and table on the side.
-map.on('load', function loadingData() {
+            let table = document.querySelector("table");
+            earthquakes.features.forEach(feature => {
+                let row = table.insertRow(-1);
+                row.insertCell(0).innerText = feature.properties.id || "N/A";
+                row.insertCell(1).innerText = feature.properties.mag || "N/A";
+                row.insertCell(2).innerText = new Date(feature.properties.time || 0).toLocaleDateString("en-US");
+            });
+        }
+        geojsonFetch();
 
-map.addSource('earthquakes', {
-    type: 'geojson',
-    data: earthquakes
-});
-
-map.addLayer({
-    'id': 'earthquakes-layer',
-    'type': 'circle',
-    'source': 'earthquakes',
-    'paint': {
-        'circle-radius': 8,
-        'circle-stroke-width': 2,
-        'circle-color': 'red',
-        'circle-stroke-color': 'white'
-    }
-});
-
-
-map.addSource('japan', {
-    type: 'geojson',
-    data: japan
-});
-
-map.addLayer({
-    'id': 'japan-layer',
-    'type': 'fill',
-    'source': 'japan',
-    'paint': {
-        'fill-color': '#0080ff', // blue color fill
-        'fill-opacity': 0.5
-    }
-});
-
-});
-
-table = document.getElementsByTagName("table")[0];
-let row, cell1, cell2, cell3;
-for (let i = 0; i < earthquakes.features.length; i++) {
-    // Create an empty <tr> element and add it to the 1st position of the table:
-    row = table.insertRow(-1);
-    cell1 = row.insertCell(0);
-    cell2 = row.insertCell(1);
-    cell3 = row.insertCell(2);
-    cell1.innerHTML = earthquakes.features[i].properties.id;
-    cell2.innerHTML = earthquakes.features[i].properties.mag;
-    cell3.innerHTML = new Date(earthquakes.features[i].properties.time).toLocaleDateString(
-        "en-US");
-}
-};
-
-geojsonFetch();
-
-
+        function sortTable() {
+            let table, rows, switching, i, x, y, shouldSwitch;
+            table = document.getElementsByTagName("table")[0];
+            switching = true;
+            while (switching) {
+                switching = false;
+                rows = table.rows;
+                for (i = 1; i < (rows.length - 1); i++) {
+                    shouldSwitch = false;
+                    x = parseFloat(rows[i].getElementsByTagName("td")[1].innerText);
+                    y = parseFloat(rows[i + 1].getElementsByTagName("td")[1].innerText);
+                    if (x < y) {
+                        shouldSwitch = true;
+                        break;
+                    }
+                }
+                if (shouldSwitch) {
+                    rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+                    switching = true;
+                }
+            }
+        }
     </script>
- </body>   
-<html>    
+</body>
+</html>
