--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
         tr:nth-child(even) {
             background-color: #f2f2f2;
         }
+    @media (max-width: 1024px) {
+    #side-panel {
+        display: none;
+        }
+    }
+
     </style>
 </head>
 <body>
@@ -61,7 +67,7 @@
         mapboxgl.accessToken = 'pk.eyJ1IjoiYmlsbHl0bzA2IiwiYSI6ImNtNnI4dHJhdTIxcGsyaXB5dDJmczF0MGcifQ.p6ainmFdX9fv4eiE7ZoDnA';
         let map = new mapboxgl.Map({
             container: 'map',
-            style: 'mapbox://styles/mapbox/satellite-v9',
+            style: 'mapbox://styles/mapbox/dark-v10',
             zoom: 5.5,
             center: [138, 38]
         });
