--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
     <meta charset="utf-8">
-    <title>Earthquake List</title>
+    <title>lab 3</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.js"></script>
@@ -67,7 +67,7 @@
         mapboxgl.accessToken = 'pk.eyJ1IjoiYmlsbHl0bzA2IiwiYSI6ImNtNnI4dHJhdTIxcGsyaXB5dDJmczF0MGcifQ.p6ainmFdX9fv4eiE7ZoDnA';
         let map = new mapboxgl.Map({
             container: 'map',
-            style: 'mapbox://styles/mapbox/dark-v11',
+            style: 'mapbox://styles/mapbox/dark-v10',
             zoom: 5.5,
             center: [138, 38]
         });
