--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
     <main id="container">
         <div id="side-panel">
-            <h2>Earthquake List</h2>
+            <h2>Lab 3</h2>
             <button onclick="sortTable()">Sort by Magnitude</button>
             <table>
                 <tr>
