--- a/earthquake.html
+++ b/earthquake.html
@@ -1,57 +1,65 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
     <meta charset="utf-8">
     <title>Earthquake List</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.js"></script>
+
     <style>
         body {
             margin: 0;
             padding: 0;
         }
+
         #container {
             display: flex;
             height: 100vh;
             flex-direction: row;
             align-items: stretch;
         }
+
         #side-panel {
             flex-basis: 500px;
             overflow-y: scroll;
         }
+
         #map {
             flex-grow: 1;
         }
+
         button {
             margin-bottom: 10px;
         }
+
         table {
             border-collapse: collapse;
             border-spacing: 0;
             width: 100%;
             border: 1px solid #ddd;
         }
-        th, td {
+
+        th,
+        td {
             text-align: left;
             padding: 16px;
         }
+
         tr:nth-child(even) {
             background-color: #f2f2f2;
         }
-        @media (max-width: 1024px) {
-        #side-panel {
-        display: none;
-        }
-        }
     </style>
 </head>
+
 <body>
     <main id="container">
         <div id="side-panel">
+
             <h2>Earthquake List</h2>
-            <button onclick="sortTable()">Sort by Magnitude</button>
+            <button>Sort by Magnitude</button>
+
             <table>
                 <tr>
                     <th>id</th>
@@ -59,28 +67,51 @@
                     <th>timestamp</th>
                 </tr>
             </table>
+
         </div>
         <div id="map"></div>
+
     </main>
     <script>
-        mapboxgl.accessToken = 'pk.eyJ1IjoiYmlsbHl0bzA2IiwiYSI6ImNtNnI4dHJhdTIxcGsyaXB5dDJmczF0MGcifQ.p6ainmFdX9fv4eiE7ZoDnA';
+        mapboxgl.accessToken ='pk.eyJ1IjoiYmlsbHl0bzA2IiwiYSI6ImNtNnI4dHJhdTIxcGsyaXB5dDJmczF0MGcifQ.p6ainmFdX9fv4eiE7ZoDnA';
+
+        // Create the map object
         let map = new mapboxgl.Map({
-            container: 'map',
-            style: 'mapbox://styles/mapbox/satellite-v9',
-            zoom: 5.5,
-            center: [138, 38]
+            container: 'map', 
+            style: 'mapbox://styles/mapbox/satellite-v9', 
+            zoom: 5.5, 
+            center: [138, 38] 
         });
 
+
         async function geojsonFetch() {
-            let response, earthquakes;
+
+            let response, earthquakes, japan, table;
             response = await fetch('assets/earthquakes.geojson');
             earthquakes = await response.json();
+            response = await fetch('assets/japan.json');
+            japan = await response.json();
 
-            map.on('load', function () {
+            table = document.getElementsByTagName("table")[0];
+            let row, cell1, cell2, cell3;
+            for (let i = 0; i < earthquakes.features.length; i++) {
+                row = table.insertRow(-1);
+                cell1 = row.insertCell(0);
+                cell2 = row.insertCell(1);
+                cell3 = row.insertCell(2);
+                cell1.innerHTML = earthquakes.features[i].properties.id;
+                cell2.innerHTML = earthquakes.features[i].properties.mag;
+                cell3.innerHTML = new Date(earthquakes.features[i].properties.time).toLocaleDateString(
+                    "en-US");
+            }
+
+            map.on('load', function loadingData() {
+
                 map.addSource('earthquakes', {
                     type: 'geojson',
                     data: earthquakes
                 });
+
                 map.addLayer({
                     'id': 'earthquakes-layer',
                     'type': 'circle',
@@ -92,29 +123,47 @@
                         'circle-stroke-color': 'white'
                     }
                 });
+
+
+                map.addSource('japan', {
+                    type: 'geojson',
+                    data: japan
+                });
+
+                map.addLayer({
+                    'id': 'japan-layer',
+                    'type': 'fill',
+                    'source': 'japan',
+                    'paint': {
+                        'fill-color': '#0080ff', 
+                        'fill-opacity': 0.5
+                    }
+                });
+
             });
 
-            let table = document.querySelector("table");
-            earthquakes.features.forEach(feature => {
-                let row = table.insertRow(-1);
-                row.insertCell(0).innerText = feature.properties.id || "N/A";
-                row.insertCell(1).innerText = feature.properties.mag || "N/A";
-                row.insertCell(2).innerText = new Date(feature.properties.time || 0).toLocaleDateString("en-US");
-            });
         }
+
         geojsonFetch();
 
-        function sortTable() {
+        let btn = document.getElementsByTagName("button")[0];
+
+        btn.addEventListener('click', sortTable);
+
+        function sortTable(e) {
             let table, rows, switching, i, x, y, shouldSwitch;
             table = document.getElementsByTagName("table")[0];
             switching = true;
+
             while (switching) {
                 switching = false;
                 rows = table.rows;
+
                 for (i = 1; i < (rows.length - 1); i++) {
                     shouldSwitch = false;
-                    x = parseFloat(rows[i].getElementsByTagName("td")[1].innerText);
-                    y = parseFloat(rows[i + 1].getElementsByTagName("td")[1].innerText);
+
+                    x = parseFloat(rows[i].getElementsByTagName("td")[1].innerHTML);
+                    y = parseFloat(rows[i + 1].getElementsByTagName("td")[1].innerHTML);
                     if (x < y) {
                         shouldSwitch = true;
                         break;
@@ -127,5 +176,7 @@
             }
         }
     </script>
+
 </body>
+
 </html>
