--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en-US">
 <head>
     <meta charset="utf-8">
@@ -51,13 +51,13 @@
 <body>
     <main id="container">
         <div id="side-panel">
-            <h2>Lab 3</h2>
-            <button onclick="sortTable()">Sort by Magnitude</button>
+            <h2>Pavement Moratorium</h2>
+            <button onclick="sortTable()">Sort by Date</button>
             <table>
                 <tr>
-                    <th>id</th>
-                    <th>magnitude</th>
-                    <th>timestamp</th>
+                    <th>Street</th>
+                    <th>Status</th>
+                    <th>Expires</th>
                 </tr>
             </table>
         </div>
@@ -68,41 +68,39 @@
         let map = new mapboxgl.Map({
             container: 'map',
             style: 'mapbox://styles/mapbox/dark-v10',
-            zoom: 5.5,
-            center: [138, 38]
+            zoom: 10,
+            center: [-122.3351, 47.6080] // Centered over Seattle
         });
 
         async function geojsonFetch() {
-            let response, earthquakes, japan, table;
-            response = await fetch('assets/earthquakes.geojson');
-            earthquakes = await response.json();
-            response = await fetch('assets/japan.json');
-            japan = await response.json();
+            let response, lines, shape, table;
+            response = await fetch('assets/lines.geojson');
+            lines = await response.json();
+            response = await fetch('assets/shape.json');
+            shape = await response.json();
 
             map.on('load', function () {
-                map.addSource('earthquakes', {
+                map.addSource('lines', {
                     type: 'geojson',
-                    data: earthquakes
+                    data: lines
                 });
                 map.addLayer({
-                    'id': 'earthquakes-layer',
-                    'type': 'circle',
-                    'source': 'earthquakes',
+                    'id': 'lines-layer',
+                    'type': 'line', // Changed to line type
+                    'source': 'lines',
                     'paint': {
-                        'circle-radius': 8,
-                        'circle-stroke-width': 2,
-                        'circle-color': 'red',
-                        'circle-stroke-color': 'white'
+                        'line-width': 3,
+                        'line-color': 'red'
                     }
                 });
-                map.addSource('japan', {
+                map.addSource('shape', {
                     type: 'geojson',
-                    data: japan
+                    data: shape
                 });
                 map.addLayer({
-                    'id': 'japan-layer',
+                    'id': 'shape-layer',
                     'type': 'fill',
-                    'source': 'japan',
+                    'source': 'shape',
                     'paint': {
                         'fill-color': '#0080ff',
                         'fill-opacity': 0.5
@@ -111,11 +109,12 @@
             });
 
             table = document.querySelector("table");
-            earthquakes.features.forEach(feature => {
-                let row = table.insertRow(-1);
-                row.insertCell(0).innerText = feature.properties.id || "N/A";
-                row.insertCell(1).innerText = feature.properties.mag || "N/A";
-                row.insertCell(2).innerText = new Date(feature.properties.time || 0).toLocaleDateString("en-US");
+
+            lines.features.forEach(feature => {
+            let row = table.insertRow(-1);
+            row.insertCell(0).innerText = feature.properties.BLOCK_DESCR || "N/A";  // Street name
+            row.insertCell(1).innerText = feature.properties.MORA_STATUS || "N/A";  // Moratorium status
+            row.insertCell(2).innerText = new Date(feature.properties.MORA_EXPIRE_DATE).toLocaleDateString("en-US") || "N/A";  // Expiration date
             });
         }
         geojsonFetch();
@@ -129,8 +128,9 @@
                 rows = table.rows;
                 for (i = 1; i < (rows.length - 1); i++) {
                     shouldSwitch = false;
-                    x = parseFloat(rows[i].getElementsByTagName("td")[1].innerText);
-                    y = parseFloat(rows[i + 1].getElementsByTagName("td")[1].innerText);
+                    x = new Date(rows[i].getElementsByTagName("td")[2].innerText);
+                    y = new Date(rows[i + 1].getElementsByTagName("td")[2].innerText);
+
                     if (x < y) {
                         shouldSwitch = true;
                         break;
